<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7b95e0"
    tools:context=".SignUp"
    >
    <!-- __________________________________________________________________________________________________________________ -->
    <TextView
        android:layout_width="269dp"
        android:layout_height="152dp"
        style="@style/textViewsStyle"
        android:layout_margin="20dp"
        android:text="@string/sign_up"
        android:textSize="100dp"
        android:textColor="@color/black"
        />
    <!-- __________________________________________________________________________________________________________________ -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/please_fill_the_following"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <!-- __________________________________________________________________________________________________________________ -->
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="120dp"
            android:text="@string/username"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_your_username"
            android:inputType="text"
            android:textColor="@color/black"
            />
    </TableRow>
    <!-- __________________________________________________________________________________________________________________ -->
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/email"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            />
    </TableRow>
    <!-- __________________________________________________________________________________________________________________ -->
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/phone_number"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_phone_number"
            android:inputType="number"
            android:textColor="@color/black"
            />
    </TableRow>
    <!-- __________________________________________________________________________________________________________________ -->
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/password"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            />
    </TableRow>
    <!-- __________________________________________________________________________________________________________________ -->
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/confirm_your_password"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            />
    </TableRow>
    <!-- __________________________________________________________________________________________________________________ -->
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="btnSignUp"
        android:text="@string/sign_up"
        />
    <!-- __________________________________________________________________________________________________________________ -->
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_have_already_an_account"
            android:textSize="18dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:clickable="true"
            android:onClick="onSignInClick"
            />
    </TableRow>

</TableLayout>